# morpheus

./: .gitignore  .gitmodules  Cargo.toml  flake.nix  shell.nix
examples/: winit.rs
src/: error.rs  lib.rs  main.rs  renderer.rs  world.rs
src/renderer/: asset_manager.rs  buffer.rs  csg_buffer.rs  deferred_renderer.rs  deffered_renderer.rs  has_bind_group_layout.rs  rendering_state.rs  screen_resolution.rs  shader_data.rs
src/renderer/asset_manager/: asset.rs  asset_map.rs
src/renderer/assets/: csg.rs  mod.rs
src/renderer/assets/csg/: csg_buffer.rs
src/renderer/deferred_renderer/: storage_buffer.rs  texture.rs  textures.rs
src/renderer/deffered_renderer/: texture.rs
src/shaders/: cube.wgsl  deferred_lighting.wgsl  raymarcher.wgsl
src/utils/: mod.rs
src/world/: camera.rs
src/world/components/: csg_renderer.rs  light.rs  mod.rs  transform.rs
