[package]
name = "morpheus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pollster = "0.3.0"
# modified version to expose the has raw display handle traits
wgpu = "0.18.0"
csg = { path="deps/csg" }
glam = "0.24.2"
legion = "0.4.0"
bytemuck = { version="1.14.0", features=["min_const_generics"] }
raw-window-handle = "0.5.0"
# include_wgsl = "1.1.1"

[dev-dependencies]
winit = { version="0.29.4", features=["rwh_05"] }
